<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlirApp</string>
    <string name="welcome">Welcome to the Smart Surveillance System S3</string>
    <string name="plug_message">Please plug in your FLIR ONE Pro camera to bottom of device</string>
    <string name="camera_discover">Please turn camera on</string>
    <string name="camera_detected">Please wait while the camera is detected</string>
    <string name="ready">Ready!</string>
    <string name="camera_charge">Please charge your camera!</string>
    <string name="timer_message1">for 10 minutes do nothing but relax and sit comfortably</string>
    <string name="timer_message2">Keep your phone and camera connected and powered on.</string>
    <string name="title_text">FLIR ONE Sample application</string>
    <string name="sdk_version_text">Thermal SDK version %1$s</string>
    <string name="connect_f1_text">Connect\nFLIR ONE</string>
    <string name="connect_sim1_text">Connect\nSimulator 1</string>
    <string name="connect_sim2_text">Connect\nSimulator 2</string>
    <string name="status"> </string>
    <string name="discovery_status_text">Discovery status %1$s</string>
    <string name="start_discovery_text">start Discovery</string>
    <string name="stop_discovery_text">stop Discovery</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="end_message">Thank you!Your images have been recorded</string>

    <string name="textView11">%1$s</string>
    <string name="video_record">VIDEO RECORD</string>
    <string name="photo_capture">Photo Capture</string>
    <string name="disconnect">disconnect</string>
    <string name="connect">Connect</string>
    <string name="next">next</string>
    <string name="instruction">Click to record videos\n Long press to take a photo</string>





    <string name="change_view">Change View \u21EA</string>
    <string name="change_view_retract">Change View \u21B2</string>
    <string name="connectSim">Toggle Sim</string>
    <string name="performTuning">Tune</string>
    <string name="rotate_on">\u21BA</string>
    <string name="rotate_off">\u21BB</string>
    <string name="battery_label">Batt:</string>
    <string name="txtTuning">Tuning...</string>
    <string name="startNetStream">Stream</string>
    <string name="stopNetStream">Disconnect</string>
    <string name="normal">Normal</string>
    <string name="vivid">Vivid</string>

</resources>
