<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="@android:color/background_dark"
             android:orientation="vertical"
             tools:context=".GlPreview"
             android:keepScreenOn="true"
             android:id="@+id/topView"
             android:touchscreenBlocksFocus="false">




    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <android.opengl.GLSurfaceView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView95"
            android:layout_gravity="center_horizontal|top"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/fullscreen_content">
        <LinearLayout
            android:id="@+id/fullscreen_content_controls_top" style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal" android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:background="@color/black_overlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/battery_label"
                android:id="@+id/batteryLabelTextView"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:layout_gravity="left|center_vertical"
                style="?actionMenuTextAppearance"/>

            <ImageView
                android:id="@+id/batteryChargeIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0"
                android:src="@android:drawable/ic_lock_idle_charging"
                android:visibility="gone"
                app:tint="@color/accent_material_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/batteryLevelTextView"
                android:layout_weight="0.48"
                android:layout_gravity="left|center_vertical"
                android:text="--" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cable"
                android:id="@+id/chargeCableToggle"
                android:layout_weight="0.10"
                android:checked="false"
                android:visibility="invisible"
                android:onClick="onSimulatedChargeCableToggleClicked" />

            <Button
                android:layout_width="51dp" style="?metaButtonBarButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/performTuning"
                android:id="@+id/tuneButton"
                android:onClick="onTuneClicked" />


        </LinearLayout>
        <FrameLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            tools:ignore="UselessParent"
            android:columnCount="3"
            android:rowCount="2">

            <ImageButton style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:layout_weight="0.33"
                android:onClick="onCaptureImageClicked"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_gravity="center_horizontal|bottom" />

            <Button
                android:layout_width="wrap_content" style="?metaButtonBarButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/connectSim"
                android:id="@+id/connect_sim_button"
                android:onClick="onConnectSimClicked"
                android:layout_gravity="center_horizontal|bottom|right" />


        </FrameLayout>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuningProgressBar"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtTuning"
            android:id="@+id/tuningTextView"
            android:labelFor="@id/tuningProgressBar"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:visibility="gone" />


    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spotMeterIcon"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_mylocation"
        android:alpha="0.9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/spotMeterValue"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:paddingTop="39dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"/>
</FrameLayout>
